Add color button

--- a/home.html
+++ b/home.html
@@ -45,6 +45,14 @@
                     <legend class="heading">variable adjust</legend>
                     <label for="data">Data to compare(Enter a number)<br/>
                     <input name="data" type="text"></label><br/>
+                    <label for="color" id="colorInsertPoint">Choose Colors to ignore<br/>
+                        <input type="color" name="color"/>
+                    </label>
+                    <div id="colorButton">
+                        <button type="button" id="createColor"> + </button>
+                        <button type="button" id="deleteColor"> - </button>
+                    </div>
+                    <br/>
                     <input type="submit" value="submit"/>
                 </fieldset>
             </form>
