add result page

--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
                 return false;
             }
         };
+        if(!supportsES6)alert('You may need newer browser to run this program!');
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
