pass data to python

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                 <fieldset id="outter_keyword">
                     <legend class="heading">keyword input</legend>
                     <label for="keyword">keyword(delimiter with comma)<br/>
-                    <textarea name="keyword" id="keyword" cols="30" rows="10"></textarea>
+                    <textarea name="keyword" id="keyword" cols="30" rows="10" placeholder="e.t.c:cat"></textarea>
                     </label><br/>
                     <label for="website">website for mining<br/>
                     <select id="website">
