Data flow Control v 1.0

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <script type="module" src="./js/control.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script type="module" src="./js/script.js"></script>
-    <title>RGB collector</title>
+    <title>Kapakino RGB collector</title>
 </head>
 <body>
     <noscript>you need js to run this program</noscript>
