--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="icon" href="./favicon-32x32.png"/>
     <script type="module" src="./js/control.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script type="module" src="./js/script.js"></script>
