--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                     </select>
                     <br/>
                     </label>
-                    <input type="submit" value="submit"/>
+                    <input id="submit-all" type="submit" value="submit"/>
                 </fieldset>
             </form>
             <form id="option">
